micko.y
%{
  #include <stdio.h>
  #include <stdlib.h>
  #include "defs.h"
  #include "symtab.h"
  #include "codegen.h"

  int yyparse(void);
  int yylex(void);
  int yyerror(char *s);
  void warning(char *s);

  extern int yylineno;
  int out_lin = 0;
  char char_buffer[CHAR_BUFFER_LENGTH];
  int error_count = 0;
  int warning_count = 0;
  int var_num = 0;
  int fun_idx = -1;
  int fcall_idx = -1;
  int lab_num = -1;
  int arr_num = 0;
  int literal_list_count = 0;
  int array_literals[100];
  int array_literals_idx = 0;

  int multiplier = -1;
  FILE *output;
%}

%union {
  int i;
  char *s;
  struct num_exp_vals *vals;
}

 

%token <i> _TYPE
%token _IF
%token _ELSE
%token _RETURN
%token <s> _ID
%token <s> _INT_NUMBER
%token <s> _UINT_NUMBER
%token _LPAREN
%token _RPAREN
%token _LBRACKET
%token _RBRACKET
%token _LSQBRACKET
%token _RSQBRACKET
%token _COMMA
%token _ASSIGN
%token _SEMICOLON
%token _DOT
%token _DOUBLE_COLON
%token _STACK
%token _POP
%token _PUSH
%token <i> _AROP
%token _POINTER;
%token <i> _RELOP

%type <vals> num_exp exp
%type <i> literal
%type <i> function_call argument rel_exp if_part size

%nonassoc ONLY_IF
%nonassoc _ELSE

%%

program
  : function_list
      {  
        if(lookup_symbol("main", FUN) == NO_INDEX)
          err("undefined reference to 'main'");
      }
  ;

function_list
  : function
  | function_list function
  ;

function
  : _TYPE _ID
      {
        fun_idx = lookup_symbol($2, FUN);
        if(fun_idx == NO_INDEX)
          fun_idx = insert_symbol($2, FUN, $1, NO_ATR, NO_ATR);
        else 
          err("redefinition of function '%s'", $2);

        code("\n%s:", $2);
        code("\n\t\tPUSH\t%%14");
        code("\n\t\tMOV \t%%15,%%14");
      }
    _LPAREN parameter _RPAREN body
      {
        clear_symbols(fun_idx + 1);
        var_num = 0;
        
        code("\n@%s_exit:", $2);
        code("\n\t\tMOV \t%%14,%%15");
        code("\n\t\tPOP \t%%14");
        code("\n\t\tRET");
      }
  ;

parameter
  : /* empty */
      { set_atr1(fun_idx, 0); }

  | _TYPE _ID
      {
        insert_symbol($2, PAR, $1, 1, NO_ATR);
        set_atr1(fun_idx, 1);
        set_atr2(fun_idx, $1);
      }
  | _TYPE _POINTER _ID 
        {
        int idx = lookup_symbol($3, ARR);
        insert_symbol($3, ARR_PAR, $1, get_atr2(idx), NO_ATR);
        set_atr1(fun_idx, 1);
        set_atr2(fun_idx, $1);
      }
  ;

body
  : _LBRACKET variable_list
      {
        if(var_num)
          code("\n\t\tSUBS\t%%15,$%d,%%15", 4*var_num);
        code("\n@%s_body:", get_name(fun_idx));
      }
    statement_list _RBRACKET
  ;

variable_list
  : /* empty */
  | variable_list variable
  ;

variable
  : _TYPE _ID _SEMICOLON
      {
        if(lookup_symbol($2, VAR|PAR|ARR) == NO_INDEX)
           insert_symbol($2, VAR, $1, ++var_num, NO_ATR);
        else 
           err("redefinition of '%s'", $2);
      }
  | _TYPE _ID size _SEMICOLON // Definition of an array
	  {
        if(lookup_symbol($2, VAR|PAR|ARR) == NO_INDEX)
		{
			insert_symbol($2, ARR, $1, ++var_num, $3);
            code("\n\t\tSUBS\t %%15,$%d,%%15", 4 * $3);
		}
           
        else 
           err("redefinition of '%s'", $2);
      }
  | _TYPE _ID _ASSIGN _LBRACKET literal_list _RBRACKET _SEMICOLON
	{
        if(lookup_symbol($2, VAR|PAR|ARR) == NO_INDEX)
        {
			int idx = insert_symbol($2, ARR, $1, ++var_num, literal_list_count);
            code("\n\t\tSUBS\t %%15,$%d,%%15", 4 * literal_list_count);
			for(int i=0; i < literal_list_count; i++)
			{
                gen_mov_arr_el(array_literals[i], i, idx); 
			}
		}
        else 
           err("redefinition of '%s'", $2);
        
		literal_list_count = 0;
    }
  | _STACK _DOUBLE_COLON _TYPE _ID size _SEMICOLON
  {
		if(lookup_symbol($4, VAR|PAR|ARR) == NO_INDEX)
			insert_symbol($4, STACK, $3, 0, $5);
		else 
			err("redefinition of '%s'", $4);
        print_symtab();
  }
  ;

literal_list
 : literal
 {
    array_literals[literal_list_count] = $1;
    literal_list_count += 1;
 }
 | literal_list _COMMA literal
 {
    array_literals[literal_list_count] = $3;
    literal_list_count += 1;
 }
 ;  

size
  : _LSQBRACKET _INT_NUMBER _RSQBRACKET
      { $$ = strtol($2, NULL, 10); }

  | _LSQBRACKET _UINT_NUMBER _RSQBRACKET
      { $$ = strtol($2, NULL, 10); }
  ;

statement_list
  : /* empty */
  | statement_list statement
  ;

statement
  : compound_statement
  | assignment_statement
  | if_statement
  | return_statement
  ;

compound_statement
  : _LBRACKET statement_list _RBRACKET
  ;

assignment_statement
  : _ID _ASSIGN num_exp _SEMICOLON
      {
        int idx = lookup_symbol($1, VAR|PAR);
        if(idx == NO_INDEX)
          err("invalid lvalue '%s' in assignment", $1);
        else
          if(get_type(idx) != get_type($3->first)){
            err("incompatible types in assignment");
            }

        if(get_kind($3->first) != ARR){
            gen_mov($3->first, idx);
        }
        else{
            gen_mov_from_arr_el($3->first, idx, $3->second);        
        }
      }
    
  | _ID size _ASSIGN num_exp _SEMICOLON
      {
        int idx = lookup_symbol($1, ARR);
        if(idx == NO_INDEX)
          err("invalid lvalue '%s' in assignment", $1);
        else
          if(get_type(idx) != get_type($4->first))
            err("incompatible types in assignment");
        gen_mov_arr_el($4->first, $2, idx); 
        print_symtab();
      }
  | _ID _DOT _PUSH _LPAREN num_exp _RPAREN _SEMICOLON
    {
		int idx = lookup_symbol($1, STACK);
        if(idx == NO_INDEX)
          err("invalid lvalue '%s' in assignment", $1);
		else
		  if(get_type(idx) != get_type($5->first))
			err("incompatible types in assignment");
		  else{
                int count_elements = get_atr1(idx);
		        count_elements++;
		        if(count_elements >= get_atr2(idx))
			        err("exceeded maximum number of elements in stack");
		        else
			        set_atr1(idx, count_elements);
        }
  }
  ;

num_exp
  : exp

  | num_exp _AROP exp
      {
        print_symtab();
        if(get_type((*$1).first) != get_type((*$3).first))
          err("invalid operands: arithmetic operation");
        int t1 = get_type($1->first);    
        printf("\nPRVA: %d", $1->second);
        printf("\nDRUGA: %d", $3->second);
        code("\n\t\t%s\t", ar_instructions[$2 + (t1 - 1) * AROP_NUMBER]);
        
        if(get_kind($1->first) == ARR){
            gen_sym_name_arr_el($1->first, $1->second);
        }else{
            gen_sym_name($1->first);   
        }
        code(",");
        if(get_kind($3->first) == ARR){
            gen_sym_name_arr_el($3->first, $3->second);
        }else{
            gen_sym_name($3->first);
        }
        code(",");
        free_if_reg($3->first);
        free_if_reg($1->first);
        struct num_exp_vals vrati; vrati.first = take_reg(); vrati.second=-1; $$ = &vrati;
        //$$ = take_reg();
        gen_sym_name($$->first);
        set_type($$->first, t1);
      }
  ;

exp
  : literal {struct num_exp_vals vrati; vrati.first = $1; vrati.second=-1; $$ = &vrati;}

  | _ID size
      {
        int head = lookup_symbol($1, ARR);
		if($2 >= get_atr2(head))
			err("'%s' index out of range", $1);
		
        if(head == NO_INDEX)
          err("'%s' undeclared", $1);

        struct num_exp_vals vrati;
        vrati.first = head; 
        vrati.second= $2; 
        $$ = &vrati;
      }
  | _ID
      {
        int idx = lookup_symbol($1, VAR|PAR);
        if(idx == NO_INDEX)
          err("'%s' undeclared", $1);
        struct num_exp_vals vrati; vrati.first = idx; vrati.second=-1; $$ = &vrati;
      }

  | _ID _DOT _POP _LPAREN _RPAREN
  {
	    int idx = lookup_symbol($1, STACK);
        if(idx == NO_INDEX) 
          err("'%s' undeclared", $1);
        struct num_exp_vals vrati; vrati.first = idx; vrati.second=-1; $$ = &vrati;
  }
  | function_call
      {
        int idx = take_reg();
        gen_mov(FUN_REG, idx);
        struct num_exp_vals vrati; vrati.first = idx; vrati.second=-1; $$ = &vrati;
      }
  
  | _LPAREN num_exp _RPAREN
      { struct num_exp_vals vrati; vrati.first = $2->first; vrati.second=-1; $$ = &vrati; }
  ;

literal
  : _INT_NUMBER
      { $$ = insert_literal($1, INT); }

  | _UINT_NUMBER
      { $$ = insert_literal($1, UINT); }
  ;

function_call
  : _ID 
      {
        fcall_idx = lookup_symbol($1, FUN);
        if(fcall_idx == NO_INDEX)
          err("'%s' is not a function", $1);
      }
    _LPAREN argument _RPAREN
      {
        if(get_atr1(fcall_idx) != $4)
          err("wrong number of arguments");
        code("\n\t\t\tCALL\t%s", get_name(fcall_idx));
        if($4 > 0)
          code("\n\t\t\tADDS\t%%15,$%d,%%15", $4 * 4);
        set_type(FUN_REG, get_type(fcall_idx));
        $$ = FUN_REG;
      }
  ;

argument
  : /* empty */
    { $$ = 0; }

  | num_exp
    { 
      if(get_atr2(fcall_idx) != get_type($1->first))
        err("incompatible type for argument");
      free_if_reg($1->first);
      code("\n\t\t\tPUSH\t");
      gen_sym_name($1->first);
      $$ = 1;
    }
  ;

if_statement
  : if_part %prec ONLY_IF
      { code("\n@exit%d:", $1); }

  | if_part _ELSE statement
      { code("\n@exit%d:", $1); }
  ;

if_part
  : _IF _LPAREN
      {
        $<i>$ = ++lab_num;
        code("\n@if%d:", lab_num);
      }
    rel_exp
      {
        code("\n\t\t%s\t@false%d", opp_jumps[$4], $<i>3);
        code("\n@true%d:", $<i>3);
      }
    _RPAREN statement
      {
        code("\n\t\tJMP \t@exit%d", $<i>3);
        code("\n@false%d:", $<i>3);
        $$ = $<i>3;
      }
  ;

rel_exp
  : num_exp _RELOP num_exp
      {
        if(get_type($1->first) != get_type($3->first))
          err("invalid operands: relational operator");
        $$ = $2 + ((get_type($1->first) - 1) * RELOP_NUMBER);
        gen_cmp($1->first, $3->first);
      }
  ;

return_statement
  : _RETURN num_exp _SEMICOLON
      {
        if(get_type(fun_idx) != get_type($2->first))
          err("incompatible types in return");

        if(get_kind($2->first) != ARR){
             gen_mov($2->first, FUN_REG);
        }
        else{
            gen_mov_from_arr_el($2->first, FUN_REG, $2->second);        
        }
        code("\n\t\tJMP \t@%s_exit", get_name(fun_idx));        
      }
  ;

%%

int yyerror(char *s) {
  fprintf(stderr, "\nline %d: ERROR: %s", yylineno, s);
  error_count++;
  return 0;
}

void warning(char *s) {
  fprintf(stderr, "\nline %d: WARNING: %s", yylineno, s);
  warning_count++;
}

int main() {
  int synerr;
  init_symtab();
  output = fopen("output.asm", "w+");

  synerr = yyparse();

  clear_symtab();
  fclose(output);
  
  if(warning_count)
    printf("\n%d warning(s).\n", warning_count);

  if(error_count) {
    remove("output.asm");
    printf("\n%d error(s).\n", error_count);
  }

  if(synerr)
    return -1;  //syntax error
  else if(error_count)
    return error_count & 127; //semantic errors
  else if(warning_count)
    return (warning_count & 127) + 127; //warnings
  else
    return 0; //OK
}
