micko.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body

    6 parameter: %empty
    7          | _TYPE _ID
    8          | _TYPE _POINTER _ID

    9 $@2: %empty

   10 body: _LBRACKET variable_list $@2 statement_list _RBRACKET

   11 variable_list: %empty
   12              | variable_list variable

   13 variable: _TYPE _ID _SEMICOLON
   14         | _TYPE _ID size _SEMICOLON
   15         | _TYPE _ID _ASSIGN _LBRACKET literal_list _RBRACKET _SEMICOLON
   16         | _STACK _DOUBLE_COLON _TYPE _ID size _SEMICOLON

   17 literal_list: literal
   18             | literal_list _COMMA literal

   19 size: _LSQBRACKET _INT_NUMBER _RSQBRACKET
   20     | _LSQBRACKET _UINT_NUMBER _RSQBRACKET

   21 statement_list: %empty
   22               | statement_list statement

   23 statement: compound_statement
   24          | assignment_statement
   25          | if_statement
   26          | return_statement

   27 compound_statement: _LBRACKET statement_list _RBRACKET

   28 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON
   29                     | _ID size _ASSIGN num_exp _SEMICOLON
   30                     | _ID _DOT _PUSH _LPAREN num_exp _RPAREN _SEMICOLON

   31 num_exp: exp
   32        | num_exp _AROP exp

   33 exp: literal
   34    | _ID size
   35    | _ID
   36    | _ID _DOT _POP _LPAREN _RPAREN
   37    | function_call
   38    | _LPAREN num_exp _RPAREN

   39 literal: _INT_NUMBER
   40        | _UINT_NUMBER

   41 $@3: %empty

   42 function_call: _ID $@3 _LPAREN argument _RPAREN

   43 argument: %empty
   44         | num_exp

   45 if_statement: if_part
   46             | if_part _ELSE statement

   47 @4: %empty

   48 $@5: %empty

   49 if_part: _IF _LPAREN @4 rel_exp $@5 _RPAREN statement

   50 rel_exp: num_exp _RELOP num_exp

   51 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    _TYPE <i> (258) 5 7 8 13 14 15 16
    _IF (259) 49
    _ELSE (260) 46
    _RETURN (261) 51
    _ID <s> (262) 5 7 8 13 14 15 16 28 29 30 34 35 36 42
    _INT_NUMBER <s> (263) 19 39
    _UINT_NUMBER <s> (264) 20 40
    _LPAREN (265) 5 30 36 38 42 49
    _RPAREN (266) 5 30 36 38 42 49
    _LBRACKET (267) 10 15 27
    _RBRACKET (268) 10 15 27
    _LSQBRACKET (269) 19 20
    _RSQBRACKET (270) 19 20
    _COMMA (271) 18
    _ASSIGN (272) 15 28 29
    _SEMICOLON (273) 13 14 15 16 28 29 30 51
    _DOT (274) 30 36
    _DOUBLE_COLON (275) 16
    _STACK (276) 16
    _POP (277) 36
    _PUSH (278) 30
    _AROP <i> (279) 32
    _POINTER (280) 8
    _RELOP <i> (281) 50
    ONLY_IF (282)


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    program (29)
        on left: 1
        on right: 0
    function_list (30)
        on left: 2 3
        on right: 1 3
    function (31)
        on left: 5
        on right: 2 3
    $@1 (32)
        on left: 4
        on right: 5
    parameter (33)
        on left: 6 7 8
        on right: 5
    body (34)
        on left: 10
        on right: 5
    $@2 (35)
        on left: 9
        on right: 10
    variable_list (36)
        on left: 11 12
        on right: 10 12
    variable (37)
        on left: 13 14 15 16
        on right: 12
    literal_list (38)
        on left: 17 18
        on right: 15 18
    size <i> (39)
        on left: 19 20
        on right: 14 16 29 34
    statement_list (40)
        on left: 21 22
        on right: 10 22 27
    statement (41)
        on left: 23 24 25 26
        on right: 22 46 49
    compound_statement (42)
        on left: 27
        on right: 23
    assignment_statement (43)
        on left: 28 29 30
        on right: 24
    num_exp <vals> (44)
        on left: 31 32
        on right: 28 29 30 32 38 44 50 51
    exp <vals> (45)
        on left: 33 34 35 36 37 38
        on right: 31 32
    literal <i> (46)
        on left: 39 40
        on right: 17 18 33
    function_call <i> (47)
        on left: 42
        on right: 37
    $@3 (48)
        on left: 41
        on right: 42
    argument <i> (49)
        on left: 43 44
        on right: 42
    if_statement (50)
        on left: 45 46
        on right: 25
    if_part <i> (51)
        on left: 49
        on right: 45 46
    @4 (52)
        on left: 47
        on right: 49
    $@5 (53)
        on left: 48
        on right: 49
    rel_exp <i> (54)
        on left: 50
        on right: 49
    return_statement (55)
        on left: 51
        on right: 26


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4


State 1

    5 function: _TYPE . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    5 function: _TYPE _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    5 function: _TYPE _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 9


State 9

    5 function: _TYPE _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 10

    $default  reduce using rule 6 (parameter)

    parameter  go to state 11


State 10

    7 parameter: _TYPE . _ID
    8          | _TYPE . _POINTER _ID

    _ID       shift, and go to state 12
    _POINTER  shift, and go to state 13


State 11

    5 function: _TYPE _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 14


State 12

    7 parameter: _TYPE _ID .

    $default  reduce using rule 7 (parameter)


State 13

    8 parameter: _TYPE _POINTER . _ID

    _ID  shift, and go to state 15


State 14

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 16

    body  go to state 17


State 15

    8 parameter: _TYPE _POINTER _ID .

    $default  reduce using rule 8 (parameter)


State 16

   10 body: _LBRACKET . variable_list $@2 statement_list _RBRACKET

    $default  reduce using rule 11 (variable_list)

    variable_list  go to state 18


State 17

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 5 (function)


State 18

   10 body: _LBRACKET variable_list . $@2 statement_list _RBRACKET
   12 variable_list: variable_list . variable

    _TYPE   shift, and go to state 19
    _STACK  shift, and go to state 20

    $default  reduce using rule 9 ($@2)

    $@2       go to state 21
    variable  go to state 22


State 19

   13 variable: _TYPE . _ID _SEMICOLON
   14         | _TYPE . _ID size _SEMICOLON
   15         | _TYPE . _ID _ASSIGN _LBRACKET literal_list _RBRACKET _SEMICOLON

    _ID  shift, and go to state 23


State 20

   16 variable: _STACK . _DOUBLE_COLON _TYPE _ID size _SEMICOLON

    _DOUBLE_COLON  shift, and go to state 24


State 21

   10 body: _LBRACKET variable_list $@2 . statement_list _RBRACKET

    $default  reduce using rule 21 (statement_list)

    statement_list  go to state 25


State 22

   12 variable_list: variable_list variable .

    $default  reduce using rule 12 (variable_list)


State 23

   13 variable: _TYPE _ID . _SEMICOLON
   14         | _TYPE _ID . size _SEMICOLON
   15         | _TYPE _ID . _ASSIGN _LBRACKET literal_list _RBRACKET _SEMICOLON

    _LSQBRACKET  shift, and go to state 26
    _ASSIGN      shift, and go to state 27
    _SEMICOLON   shift, and go to state 28

    size  go to state 29


State 24

   16 variable: _STACK _DOUBLE_COLON . _TYPE _ID size _SEMICOLON

    _TYPE  shift, and go to state 30


State 25

   10 body: _LBRACKET variable_list $@2 statement_list . _RBRACKET
   22 statement_list: statement_list . statement

    _IF        shift, and go to state 31
    _RETURN    shift, and go to state 32
    _ID        shift, and go to state 33
    _LBRACKET  shift, and go to state 34
    _RBRACKET  shift, and go to state 35

    statement             go to state 36
    compound_statement    go to state 37
    assignment_statement  go to state 38
    if_statement          go to state 39
    if_part               go to state 40
    return_statement      go to state 41


State 26

   19 size: _LSQBRACKET . _INT_NUMBER _RSQBRACKET
   20     | _LSQBRACKET . _UINT_NUMBER _RSQBRACKET

    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43


State 27

   15 variable: _TYPE _ID _ASSIGN . _LBRACKET literal_list _RBRACKET _SEMICOLON

    _LBRACKET  shift, and go to state 44


State 28

   13 variable: _TYPE _ID _SEMICOLON .

    $default  reduce using rule 13 (variable)


State 29

   14 variable: _TYPE _ID size . _SEMICOLON

    _SEMICOLON  shift, and go to state 45


State 30

   16 variable: _STACK _DOUBLE_COLON _TYPE . _ID size _SEMICOLON

    _ID  shift, and go to state 46


State 31

   49 if_part: _IF . _LPAREN @4 rel_exp $@5 _RPAREN statement

    _LPAREN  shift, and go to state 47


State 32

   51 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 48
    _INT_NUMBER   shift, and go to state 49
    _UINT_NUMBER  shift, and go to state 50
    _LPAREN       shift, and go to state 51

    num_exp        go to state 52
    exp            go to state 53
    literal        go to state 54
    function_call  go to state 55


State 33

   28 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON
   29                     | _ID . size _ASSIGN num_exp _SEMICOLON
   30                     | _ID . _DOT _PUSH _LPAREN num_exp _RPAREN _SEMICOLON

    _LSQBRACKET  shift, and go to state 26
    _ASSIGN      shift, and go to state 56
    _DOT         shift, and go to state 57

    size  go to state 58


State 34

   27 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 21 (statement_list)

    statement_list  go to state 59


State 35

   10 body: _LBRACKET variable_list $@2 statement_list _RBRACKET .

    $default  reduce using rule 10 (body)


State 36

   22 statement_list: statement_list statement .

    $default  reduce using rule 22 (statement_list)


State 37

   23 statement: compound_statement .

    $default  reduce using rule 23 (statement)


State 38

   24 statement: assignment_statement .

    $default  reduce using rule 24 (statement)


State 39

   25 statement: if_statement .

    $default  reduce using rule 25 (statement)


State 40

   45 if_statement: if_part .
   46             | if_part . _ELSE statement

    _ELSE  shift, and go to state 60

    $default  reduce using rule 45 (if_statement)


State 41

   26 statement: return_statement .

    $default  reduce using rule 26 (statement)


State 42

   19 size: _LSQBRACKET _INT_NUMBER . _RSQBRACKET

    _RSQBRACKET  shift, and go to state 61


State 43

   20 size: _LSQBRACKET _UINT_NUMBER . _RSQBRACKET

    _RSQBRACKET  shift, and go to state 62


State 44

   15 variable: _TYPE _ID _ASSIGN _LBRACKET . literal_list _RBRACKET _SEMICOLON

    _INT_NUMBER   shift, and go to state 49
    _UINT_NUMBER  shift, and go to state 50

    literal_list  go to state 63
    literal       go to state 64


State 45

   14 variable: _TYPE _ID size _SEMICOLON .

    $default  reduce using rule 14 (variable)


State 46

   16 variable: _STACK _DOUBLE_COLON _TYPE _ID . size _SEMICOLON

    _LSQBRACKET  shift, and go to state 26

    size  go to state 65


State 47

   49 if_part: _IF _LPAREN . @4 rel_exp $@5 _RPAREN statement

    $default  reduce using rule 47 (@4)

    @4  go to state 66


State 48

   34 exp: _ID . size
   35    | _ID .
   36    | _ID . _DOT _POP _LPAREN _RPAREN
   42 function_call: _ID . $@3 _LPAREN argument _RPAREN

    _LSQBRACKET  shift, and go to state 26
    _DOT         shift, and go to state 67

    _LPAREN   reduce using rule 41 ($@3)
    $default  reduce using rule 35 (exp)

    size  go to state 68
    $@3   go to state 69


State 49

   39 literal: _INT_NUMBER .

    $default  reduce using rule 39 (literal)


State 50

   40 literal: _UINT_NUMBER .

    $default  reduce using rule 40 (literal)


State 51

   38 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 48
    _INT_NUMBER   shift, and go to state 49
    _UINT_NUMBER  shift, and go to state 50
    _LPAREN       shift, and go to state 51

    num_exp        go to state 70
    exp            go to state 53
    literal        go to state 54
    function_call  go to state 55


State 52

   32 num_exp: num_exp . _AROP exp
   51 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 71
    _AROP       shift, and go to state 72


State 53

   31 num_exp: exp .

    $default  reduce using rule 31 (num_exp)


State 54

   33 exp: literal .

    $default  reduce using rule 33 (exp)


State 55

   37 exp: function_call .

    $default  reduce using rule 37 (exp)


State 56

   28 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 48
    _INT_NUMBER   shift, and go to state 49
    _UINT_NUMBER  shift, and go to state 50
    _LPAREN       shift, and go to state 51

    num_exp        go to state 73
    exp            go to state 53
    literal        go to state 54
    function_call  go to state 55


State 57

   30 assignment_statement: _ID _DOT . _PUSH _LPAREN num_exp _RPAREN _SEMICOLON

    _PUSH  shift, and go to state 74


State 58

   29 assignment_statement: _ID size . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 75


State 59

   22 statement_list: statement_list . statement
   27 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 31
    _RETURN    shift, and go to state 32
    _ID        shift, and go to state 33
    _LBRACKET  shift, and go to state 34
    _RBRACKET  shift, and go to state 76

    statement             go to state 36
    compound_statement    go to state 37
    assignment_statement  go to state 38
    if_statement          go to state 39
    if_part               go to state 40
    return_statement      go to state 41


State 60

   46 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 31
    _RETURN    shift, and go to state 32
    _ID        shift, and go to state 33
    _LBRACKET  shift, and go to state 34

    statement             go to state 77
    compound_statement    go to state 37
    assignment_statement  go to state 38
    if_statement          go to state 39
    if_part               go to state 40
    return_statement      go to state 41


State 61

   19 size: _LSQBRACKET _INT_NUMBER _RSQBRACKET .

    $default  reduce using rule 19 (size)


State 62

   20 size: _LSQBRACKET _UINT_NUMBER _RSQBRACKET .

    $default  reduce using rule 20 (size)


State 63

   15 variable: _TYPE _ID _ASSIGN _LBRACKET literal_list . _RBRACKET _SEMICOLON
   18 literal_list: literal_list . _COMMA literal

    _RBRACKET  shift, and go to state 78
    _COMMA     shift, and go to state 79


State 64

   17 literal_list: literal .

    $default  reduce using rule 17 (literal_list)


State 65

   16 variable: _STACK _DOUBLE_COLON _TYPE _ID size . _SEMICOLON

    _SEMICOLON  shift, and go to state 80


State 66

   49 if_part: _IF _LPAREN @4 . rel_exp $@5 _RPAREN statement

    _ID           shift, and go to state 48
    _INT_NUMBER   shift, and go to state 49
    _UINT_NUMBER  shift, and go to state 50
    _LPAREN       shift, and go to state 51

    num_exp        go to state 81
    exp            go to state 53
    literal        go to state 54
    function_call  go to state 55
    rel_exp        go to state 82


State 67

   36 exp: _ID _DOT . _POP _LPAREN _RPAREN

    _POP  shift, and go to state 83


State 68

   34 exp: _ID size .

    $default  reduce using rule 34 (exp)


State 69

   42 function_call: _ID $@3 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 84


State 70

   32 num_exp: num_exp . _AROP exp
   38 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 85
    _AROP    shift, and go to state 72


State 71

   51 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 51 (return_statement)


State 72

   32 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 48
    _INT_NUMBER   shift, and go to state 49
    _UINT_NUMBER  shift, and go to state 50
    _LPAREN       shift, and go to state 51

    exp            go to state 86
    literal        go to state 54
    function_call  go to state 55


State 73

   28 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   32 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 87
    _AROP       shift, and go to state 72


State 74

   30 assignment_statement: _ID _DOT _PUSH . _LPAREN num_exp _RPAREN _SEMICOLON

    _LPAREN  shift, and go to state 88


State 75

   29 assignment_statement: _ID size _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 48
    _INT_NUMBER   shift, and go to state 49
    _UINT_NUMBER  shift, and go to state 50
    _LPAREN       shift, and go to state 51

    num_exp        go to state 89
    exp            go to state 53
    literal        go to state 54
    function_call  go to state 55


State 76

   27 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 27 (compound_statement)


State 77

   46 if_statement: if_part _ELSE statement .

    $default  reduce using rule 46 (if_statement)


State 78

   15 variable: _TYPE _ID _ASSIGN _LBRACKET literal_list _RBRACKET . _SEMICOLON

    _SEMICOLON  shift, and go to state 90


State 79

   18 literal_list: literal_list _COMMA . literal

    _INT_NUMBER   shift, and go to state 49
    _UINT_NUMBER  shift, and go to state 50

    literal  go to state 91


State 80

   16 variable: _STACK _DOUBLE_COLON _TYPE _ID size _SEMICOLON .

    $default  reduce using rule 16 (variable)


State 81

   32 num_exp: num_exp . _AROP exp
   50 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 72
    _RELOP  shift, and go to state 92


State 82

   49 if_part: _IF _LPAREN @4 rel_exp . $@5 _RPAREN statement

    $default  reduce using rule 48 ($@5)

    $@5  go to state 93


State 83

   36 exp: _ID _DOT _POP . _LPAREN _RPAREN

    _LPAREN  shift, and go to state 94


State 84

   42 function_call: _ID $@3 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 48
    _INT_NUMBER   shift, and go to state 49
    _UINT_NUMBER  shift, and go to state 50
    _LPAREN       shift, and go to state 51

    $default  reduce using rule 43 (argument)

    num_exp        go to state 95
    exp            go to state 53
    literal        go to state 54
    function_call  go to state 55
    argument       go to state 96


State 85

   38 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 38 (exp)


State 86

   32 num_exp: num_exp _AROP exp .

    $default  reduce using rule 32 (num_exp)


State 87

   28 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 28 (assignment_statement)


State 88

   30 assignment_statement: _ID _DOT _PUSH _LPAREN . num_exp _RPAREN _SEMICOLON

    _ID           shift, and go to state 48
    _INT_NUMBER   shift, and go to state 49
    _UINT_NUMBER  shift, and go to state 50
    _LPAREN       shift, and go to state 51

    num_exp        go to state 97
    exp            go to state 53
    literal        go to state 54
    function_call  go to state 55


State 89

   29 assignment_statement: _ID size _ASSIGN num_exp . _SEMICOLON
   32 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 98
    _AROP       shift, and go to state 72


State 90

   15 variable: _TYPE _ID _ASSIGN _LBRACKET literal_list _RBRACKET _SEMICOLON .

    $default  reduce using rule 15 (variable)


State 91

   18 literal_list: literal_list _COMMA literal .

    $default  reduce using rule 18 (literal_list)


State 92

   50 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 48
    _INT_NUMBER   shift, and go to state 49
    _UINT_NUMBER  shift, and go to state 50
    _LPAREN       shift, and go to state 51

    num_exp        go to state 99
    exp            go to state 53
    literal        go to state 54
    function_call  go to state 55


State 93

   49 if_part: _IF _LPAREN @4 rel_exp $@5 . _RPAREN statement

    _RPAREN  shift, and go to state 100


State 94

   36 exp: _ID _DOT _POP _LPAREN . _RPAREN
